--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts"
+    "start": "ts-node src/index.ts"
   },
   "dependencies": {
     "apollo-datasource-rest": "^0.9.4",
